--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Things I’d Like to Buy with My Salary</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Electric Bike</li>
+    </ol>
+
+    <!-- Unordered List: Holiday destinations -->
+    <h2>Holiday Destinations I’d Like to Visit</h2>
+    <ul>
+        <li data-ns-test="holidayList">Switzerland</li>
+        <li data-ns-test="holidayList">Japan</li>
+        <li data-ns-test="holidayList">New Zealand</li>
+    </ul>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
